--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2784,35 +2784,35 @@ fieldset:disabled a.btn {
     pointer-events: none;
 }
 
-.btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
+/*.btn-primary {*/
+/*    color: #fff;*/
+/*    background-color: #007bff;*/
+/*    border-color: #007bff;*/
+/*}*/
 
-.btn-primary:hover {
-    color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
-}
+/*.btn-primary:hover {*/
+/*    color: #fff;*/
+/*    background-color: #0069d9;*/
+/*    border-color: #0062cc;*/
+/*}*/
 
-.btn-primary:focus, .btn-primary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
+/*.btn-primary:focus, .btn-primary.focus {*/
+/*    -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);*/
+/*    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);*/
+/*}*/
 
-.btn-primary.disabled, .btn-primary:disabled {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-}
+/*.btn-primary.disabled, .btn-primary:disabled {*/
+/*    color: #fff;*/
+/*    background-color: #007bff;*/
+/*    border-color: #007bff;*/
+/*}*/
 
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #0062cc;
-    border-color: #005cbf;
-}
+/*.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,*/
+/*.show > .btn-primary.dropdown-toggle {*/
+/*    color: #fff;*/
+/*    background-color: #0062cc;*/
+/*    border-color: #005cbf;*/
+/*}*/
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
@@ -12022,16 +12022,44 @@ h1, h2, h3, h4, h5,
     color: #fff !important;
 }
 
+.contact-us-btn
+{
+    font-size: 16px;
+    background-color: #1d3f73!important;
+    border: 4px solid #1b427e !important;
+    color:whitesmoke;
+    transition: all 0.3s ease;
+}
+
+.contact-us-btn:hover {
+    font-size: 16px;
+    border: 4px solid #14366a !important;
+    background: #102d59 !important;
+    color:whitesmoke;
+}
+
 .btn.btn-primary:hover {
-    border: 1px solid #e5b856;
-    background: transparent;
-    color: #e5b856;
+    border: 1px solid #dfaa35 !important;
+    background: #d19e2d !important; ;
 }
 
 .btn.btn-primary.btn-outline-primary {
     border: 1px solid #e5b856;
     background: transparent;
     color: #e5b856;
+}
+
+.learn-more
+{
+    font-size: 18px;
+
+}
+.learn-more:hover
+{
+    font-size: 18px;
+   background: #e5b856;
+    border-radius: 5px;
+    color: #fff;
 }
 
 .btn.btn-primary.btn-outline-primary:hover {
@@ -13910,19 +13938,21 @@ textarea.form-control {
 
 .dropdown {
     list-style: none;
-    height: 400px;
+    height: auto;
     position: absolute;
     z-index: 999;
     display: none;
     border-radius: 3px;
     overflow: auto;
-    width: auto;
+
     background-color: #f1f0f0;
     flex-direction: column;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
     transition: ease 0.3ms;
+    max-height: 252px;
+    width: 12%;
 }
 
 .dropdown li {
@@ -14169,25 +14199,31 @@ ul::-webkit-scrollbar-thumb:hover {
     /*background-color: rgba(63, 61, 61, 0.55); !* Black w/opacity/see-through *!*/
     /*color: white;*/
     font-weight: bold;
-    border: 2px solid #d7a742;
+    /*border: 2px solid #d7a742;*/
     /*position: absolute;*/
     /*top: 50%;*/
     /*left: 50%;*/
     /*transform: translate(-50%, -50%);*/
     /*z-index: 2;*/
-    width: 70%;
+    width: 100%;
     /*padding-top: 20px;*/
     text-align: center;
     border-radius: 5px;
-    background: rgba(255, 255, 255, 0.06); /* Background with opacity */
+    background: rgb(22, 48, 87); /* Background with opacity */
     backdrop-filter: blur(6px); /* Apply blur effect */
-    box-shadow: 0 4px 6px rgba(54, 51, 51, 0.1); /* Box shadow for depth */
+    box-shadow: 0 4px 6px rgba(48, 105, 218, 0.1); /* Box shadow for depth */
     /*height: auto;*/
 }
 
 .divider {
     width: 80%;
     border-bottom: 2px solid #d7a742; /* Adjust the color and thickness as needed */
+    margin: 20px auto; /* Adjust the margin to control spacing around the divider */
+}
+
+.divider-1 {
+    width: 80%;
+    border-bottom: 2px solid rgb(22, 48, 87); /* Adjust the color and thickness as needed */
     margin: 20px auto; /* Adjust the margin to control spacing around the divider */
 }
 .close-icon
